--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,14 @@ Package: braidIndex
 Type: Package
 Title: Calculation of hydromorphological indexes for braided rivers (BRI* and W*)
 Version: 0.1.0
-Author: Lise Devreux, Margot Chapuis, Barbara Belletti, ! à reprendre après finalisation ! 
+Authors@R: 
+    c(person(given = "Lise",
+             family = "Devreux",
+             role = c("aut")),
+      person(given = "Lise",
+             family = "Vaudor",
+             role = c("aut", "cre")
+             ))
 Maintainer: Lise Vaudor <lise.vaudor@ens-lyon.fr>
 Description: Calculate hydromorphological indexes BRI* and W* regarding braiding rivers.
      Ce code peut être utilisé pour appliquer les indices morphométriques suivants (Terrier et al., 2019): le BRI* (Liébault et al., 2013) et le W* (Piégay et al., 2009) sur des données de tronçons en tresses..
